ChangeLog
=========

This file contains a listing of modifications to notgame in CVS on a per-commit
basis.  Dates are included, as are nicknames/names/initials for the persons
making the changes.
	

Wed Aug 25 14:45:07 PDT 1999	Michael Jennings <mej@eterm.org>

	Initial work on getting this sucker into CVS.

-------------------------------------------------------------------------------
Wed Aug 25 15:22:08 PDT 1999	Michael Jennings <mej@eterm.org>

	First compilable version.  Doesn't do much yet, though. :-)
	
-------------------------------------------------------------------------------
Wed Aug 25 17:05:04 PDT 1999	Michael Jennings <mej@eterm.org>

	Some widgets that do stuff....
	
-------------------------------------------------------------------------------