@@ -30,21 +30,32 @@ static const char cvs_ident[] = "$Id$";
 #include "debug.h"
 #include "conf.h"
 #include "notgame.h"
-#include "play.h"
-#include "pregame.h"
+
+GList *player_group_list = NULL;
 
 void
-conf_init_subsystem(void) {
+player_group_add(GtkWidget *w, gpointer pbox) {
 
+  char *name;
+  GtkWidget *player_groups;
+  GList *entry;
+
+  player_groups = (GtkWidget *) pbox;
+  name = gtk_entry_get_text(GTK_ENTRY(GTK_COMBO(player_groups)->entry));
+  REQUIRE(name != NULL);
+  D(("name == %s (0x%08x)\n", name, name));
+
+  entry = g_list_find_custom(player_group_list, name, (GCompareFunc) strcasecmp);
+  D(("entry == 0x%08x\n", entry));
+
+  if (!entry) {
+    player_group_list = g_list_append(player_group_list, strdup(name));
+    gtk_combo_set_popdown_strings(GTK_COMBO(player_groups), player_group_list);
+  }
+  
 }
 
-unsigned char
-conf_read_config(const char *file) {
+void
+player_list_update(GList *group) {
 
 }
-
-unsigned char
-conf_load(void) {
-
-}
-
