@@ -21,3 +21,8 @@ Wed Aug 25 17:05:04 PDT 1999	Michael Jennings <mej@eterm.org>
 	Some widgets that do stuff....
 	
 -------------------------------------------------------------------------------
+Fri Aug 27 20:41:58 PDT 1999	Michael Jennings <mej@eterm.org>
+
+	Some initial group stuff.  Values are hard-coded for now.
+	
+-------------------------------------------------------------------------------
